Tweaks CSS and html.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Kỳ Thanh, Ky Thanh">
+    <title>Kỳ Thanh - PKT</title>
+
+    <meta name="description" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT.">
     <meta name="author" content="Kỳ Thanh">
 
-    <title>Kỳ Thanh</title>
+    <meta name="x-country" content="vn">
+    <link rel="canonical" href="https://kythanh.github.io">
+
+    <link rel="alternate" hreflang="en-gb" href="https://kythanh.github.io">
+    <link rel="alternate" hreflang="en" href="https://kythanh.github.io">
+    
+    <meta property="og:title" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT." />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT." />
+    <meta property="og:title" content="Kỳ Thanh, Ky Thanh" />
+    <meta property="og:locale" content="vn_VN" />
+    <meta property="og:url" content="https://twitter.com/kythanh" />
+    <meta property="og:image" content="https://kythanh.github.io/images/kythanh.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@kythanh">
+    <meta name="twitter:title" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT.">
+    <meta name="twitter:description" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT.">
+    <meta name="twitter:creator" content="@kythanh">
+    <meta name="twitter:image:src" content="https://kythanh.github.io/images/kythanh.jpg">
+    <meta name="twitter:image:alt" content="Give me project specs, I will turn it into app. Kỳ Thanh, Ky Thanh aka. PKT." />
+    <meta name="twitter:domain" content="https://twitter.com/kythanh">
 
     <!--google fonts-->
 
@@ -30,25 +53,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
-
-
-
-
-<style>
-
-p a i{
-  color: #000;
-}
-
-p a i.fa-bitbucket:hover {
-    color: #205081;
-}
-
-p a i.fa-twitter:hover {
-    color: #55acee;
-}
-
-</style>
 
   </head>
 
